Update PlayerSelectionView.java